<resources>
    <string name="app_name">Argonify</string>

    <!--These are mostly used for the SelectionDisplay-->
    <string name="select_tuple">Select Entry</string>
    <string name="unavailable_info" />
    <string name="copy_password">Copy password to clipboard</string>
    <string name="copy_email">Copy email to clipboard</string>
    <string name="copy_username">Copy username to clipboard</string>
    <string name="clear_clipboard">Clear latest clipboard entry</string>
    <!--Comment end-->

    <!--These are partially also used as tags for their corresponding ImageButtons etc.
    They MUST have the exact same names as the columns of the Passbase table-->
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="notes">Notes</string>
    <!--Comment end-->

    <!--These are for the options menu-->
    <string name="options">Options</string>
    <string name="add_entry">Add entry</string>
    <string name="delete_entry">Delete entry</string>
    <string name="edit_entry">Edit entry</string>
    <string name="password_generator">Password Generator</string>
    <!--And this one is specifically for toggling password revelation whilst adding an entry-->
    <string name="toggle_password_revelation">Toggle password revelation</string>
    <!--Comment end-->

    <!--These are for the Password Generator activity-->
    <string name="numbers">Numbers</string>
    <string name="symbols">Symbols</string>
    <string name="uppercase">Uppercase characters</string>
    <string name="lowercase">Lowercase characters</string>
    <string name="generate">Generate</string>
    <string name="excluded_characters">Excluded characters</string>
    <string name="no_separation">No separation between characters required.</string>
    <string name="generated_password">Generated Password</string>
    <string name="copy_generated_password">Copy generated password to clipboard</string>
    <string name="length">Length</string>
    <string name="instant_password">Instant PW</string>
    <string name="open_password_generator">Open Password Generator</string>
    <string name="instantly_generate_password">Instantly generate password</string>
    <string name="password_auto_copy">The password is automatically copied to the password field of the previous window.</string>
    <!--Comment end-->

    <!--These are for the settings-->
    <string name="applock_description">Choose a method for app protection.</string>
    <string name="enhanced_pattern">Enhanced Pattern</string>
    <string name="settings">Settings</string>
    <string name="set_pattern_instructions">Draw a pattern on the grid by clicking on the cells.</string>
    <string name="set_pattern_requirements">Pattern must have at least 6 selected cells.</string>
    <string name="possible_combinations">Possible combinations:</string>
    <string name="save_new_pattern">Save new pattern</string>
    <string name="save_new_password">Save new password</string>
    <string name="confirm">Confirm</string>
    <string name="undo">Undo</string>
    <string name="clear">Clear</string>
    <string name="set_password_requirements">Password must contain at least 8 characters.</string>
    <string name="encrypting">Encrypting…</string>
    <string name="decrypting">Decrypting…</string>
    <string name="pattern_requirement_length">At least 6 cells</string>
    <string name="pattern_requirement_favourite">1 favourite cell</string>
    <string name="pattern_requirement_trafficlight">1 triple cell</string>
    <string name="pattern_requirement_sliders">Both sliders set</string>
    <string name="applock">Applock</string>
    <string name="choose_app_protection">Choose how you want to protect your data</string>
    <string name="password_requirement_length">At least 8 characters</string>
    <string name="password_requirement_lowercase">At least 1 lowercase character</string>
    <string name="password_requirement_uppercase">At least 1 uppercase character</string>
    <string name="password_requirement_numbers">At least 1 number</string>
    <string name="password_requirement_symbols">At least 1 symbol</string>
    <string name="default_settings_passgen">Password generation configuration.</string>
    <string name="password_length">Password length</string>
    <string name="generator_configuration">Generator configuration</string>
    <string name="import_entries">Import entries from an external database.</string>
    <string name="import_database">Import Database</string>
    <string name="export_database">Export Database</string>
    <string name="export_entries">Export entries to an external database.</string>
    <string name="export_notice">Exporting will copy an unencrypted database of all your data in your local storage.
        This renders all security measures of Argonify useless, hence it is important NOT to keep the file on your phone.</string>
    <string name="import_notice">Importing requires any unencrypted database that contains all five main attributes, like the
        ones you get from exporting in Argonify. Place the file in your internal storage as /Argonify/unencryptedArgonify.db</string>
    <string name="clear_database">Clear Database</string>
    <string name="clear_entries">Irreversibly delete all entries.</string>
    <string name="clear_notice">This action cannot be undone. You will be asked for confirmation in the next step.</string>
    <string name="permission_rw_notice">Argonify needs your permission to read and write files on your device, so exporting and
        importing your database may function. In the app info screen you can go to "Permissions" and allow the management of files
        on your device. Open app info?</string>
    <!--Comment end-->

</resources>