<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?attr/backgroundColor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings.PassGenConfig.PassGenConfigActivity">

    <NumberPicker
        android:id="@+id/np_settingsGenLength"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_genNoSeparation"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/password_length"
        android:textColor="?attr/colorPrimaryVariant"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/np_settingsGenLength"
        app:layout_constraintStart_toEndOf="@+id/np_settingsGenLength"
        app:layout_constraintTop_toTopOf="@+id/np_settingsGenLength" />

    <TextView
        android:id="@+id/txt_settingsGenTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textColor="?attr/colorPrimaryVariant"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/generator_configuration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_settingsGenLowercase"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/lowercase"
        android:textColor="?attr/colorPrimaryVariant"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_settingsGenTitle" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_settingsGenUppercase"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/uppercase"
        android:textSize="16sp"
        android:textColor="?attr/colorPrimaryVariant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch_settingsGenLowercase" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_settingsGenNumbers"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/numbers"
        android:textSize="16sp"
        android:textColor="?attr/colorPrimaryVariant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch_settingsGenUppercase" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_settingsGenSymbols"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/symbols"
        android:textSize="16sp"
        android:textColor="?attr/colorPrimaryVariant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch_settingsGenNumbers" />

    <EditText
        android:id="@+id/etxt_settingsGenExcludedChars"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:ems="10"
        android:hint="@string/excluded_characters"
        android:importantForAutofill="no"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch_settingsGenSymbols"
        android:inputType="textNoSuggestions" />

    <TextView
        android:id="@+id/txt_genNoSeparation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/no_separation"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/etxt_settingsGenExcludedChars"
        app:layout_constraintTop_toBottomOf="@+id/etxt_settingsGenExcludedChars" />


</androidx.constraintlayout.widget.ConstraintLayout>