<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?attr/backgroundColor"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/txt_settingsName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/settings"
        android:textColor="?attr/colorPrimaryVariant"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="@+id/txt_settingsApplock"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_settingsApplock"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/option_top_dark"
        android:clickable="true"
        android:focusable="true"
        android:gravity="start"
        android:onClick="applock"
        android:paddingStart="16dp"
        android:paddingTop="12dp"
        android:paddingEnd="16dp"
        android:text="@string/applock"
        android:textColor="?attr/colorPrimaryVariant"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_settingsName" />

    <TextView
        android:id="@+id/txt_settingsApplockDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="16dp"
        android:text="@string/choose_app_protection"
        app:layout_constraintEnd_toEndOf="@+id/txt_settingsApplock"
        app:layout_constraintStart_toStartOf="@+id/txt_settingsApplock"
        app:layout_constraintTop_toTopOf="@+id/txt_settingsApplock" />


</androidx.constraintlayout.widget.ConstraintLayout>